<resources>
    <string name="app_name">Online Doubt Solving Application</string>
    <string name="student_login">Student LogIn</string>
    <string name="enrollment">Enrollment</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="click_to_register">Click to Register</string>
    <string name="login_type">LogIn Type:</string>
    <string name="student">Student</string>
    <string name="or">or</string>
    <string name="faculty">Faculty</string>
    <string name="faculty_login">Faculty LogIn</string>
    <string name="faculty_id">Faculty Id</string>
    <string name="signup">SignUp</string>
    <string name="email_id">Email Id</string>
    <string name="faculty_id_no">Faculty Id No.</string>
    <string name="name">Name</string>
    <string name="faculty_registration">Faculty Registration</string>
    <string name="enrollment_no">Enrollment No.</string>
    <string name="student_registration">Student Registration</string>
    <string name="student_profile_registration">Student Profile Registration</string>
    <string name="enter_your_enrollment_no">Enter your Enrollment No.</string>
    <string name="submit">Submit</string>
    <string name="faculty_profile_registration">Faculty Profile Registration</string>
    <string name="enter_your_faclty_id">Enter your Faclty Id</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_database_connected">WelCome Database Connected...</string>
    <string name="title_activity_after_1">after_1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!!!!!</string>
    <string name="logout">LogOut</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home_1">home_1</string>
    <string name="home">Home</string>
    <string name="civil">Civil</string>
    <string name="computer">Computer</string>
    <string name="electrical">Electrical</string>
    <string name="it">IT</string>
    <string name="mechanical">Mechanical</string>
    <string name="semester1">Semester1</string>
    <string name="semester2">Semester2</string>
    <string name="semester3">Semester 3</string>
    <string name="semester4">Semester 4</string>
    <string name="semester5">Semester 5</string>
    <string name="semester6">Semester 6</string>
    <string name="semester7">Semester 7</string>
    <string name="semester8">Semester 8</string>
    <string name="value">Value</string>
    <string name="semester_1_and_2">Semester 1 and 2</string>
    <string name="title_activity_answer">answer</string>
    <string name="write_your_answer">Write Your Answer...</string>
    <string name="add_question">Add Question</string>
    <string name="answer">Answer</string>
    <string name="write_your_question">Write Your Question</string>
    <string name="id_valid">Enter valid Id</string>
    <string name="email_valid">Enter valid Email</string>
    <string name="pass_valid">Password range is 8 to 10 characters</string>
    <string name="cn_pass_valid">Confirm Password is not same as password</string>
</resources>
