<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mechanical"
        android:orientation="vertical"
        android:background="@drawable/new_login_gradients">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/semester1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester_1_and_2"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <Button
                android:id="@+id/semester3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester3"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/semester4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester4"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/semester5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester5"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/semester6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester6"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/semester7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester7"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/semester8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="none"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/semester8"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#fff"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>