<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".computer"
        android:orientation="vertical"
        android:background="@drawable/new_login_gradients">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester_1_and_2"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester1"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />


            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester3"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester3"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester4"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester4"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester5"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester5"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester6"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester6"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester7"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester7"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/semester8"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/semester8"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/mon"
                    android:enabled="false" android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>