<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_home_1"
        tools:context=".home_1"
        android:orientation="vertical"
        android:background="@drawable/new_login_gradients">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/civil"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/civil"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/computer"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/computer"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/electrical"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/electrical"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/it"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/it"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:text="@string/mechanical"
                    android:maxLines="1" android:textColor="#fff"
                    android:layout_marginTop="70dp" android:id="@+id/mechanical"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>