<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".faculty_registration"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/new_login_gradients">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="240dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/teacher"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="@string/name"
                    android:textColorHint="#fff"
                    android:maxLines="1" android:textColor="#fff"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:layout_marginTop="55dp" android:id="@+id/name1"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="@string/faculty_id"
                    android:textColorHint="#fff"
                    android:maxLines="1" android:textColor="#fff"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:layout_marginTop="4dp" android:id="@+id/faculty_id"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="@string/email_id"
                    android:textColorHint="#fff"
                    android:maxLines="1" android:textColor="#fff"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:layout_marginTop="4dp" android:id="@+id/email1"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:textColorHint="#fff"
                    android:maxLines="1" android:textColor="#fff"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp" android:id="@+id/pass1"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="#fff"
                    android:maxLines="1" android:textColor="#fff"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp" android:id="@+id/cnfpass1"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_login"
                    android:text="@string/signup"
                    android:textColor="#f16f7d"
                    android:textAllCaps="false"
                    android:padding="16dp"
                    android:clickable="true"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_marginTop="24dp"
                    android:textSize="18sp" android:id="@+id/fac_signup"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>