<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".stu_enrollment"
        android:layout_gravity="center"
        android:background="@drawable/layout_background">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
            android:text="@string/student_profile_registration"
            android:layout_width="345dp"
            android:layout_height="88dp"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="79dp" android:layout_marginEnd="163dp" android:layout_marginRight="163dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="163dp" android:layout_marginStart="163dp" android:gravity="center"
            app:fontFamily="sans-serif-smallcaps" android:textSize="30sp" android:textStyle="bold"
            android:textColor="#FF6347"/>
    <EditText
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="84dp" android:layout_marginStart="84dp" android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_your_enrollment_no"
            android:textColor="#fff" android:textColorHint="#fff"/>
    <Button
            android:text="@string/submit"
            android:layout_width="187dp"
            android:layout_height="46dp"
            android:id="@+id/button2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="148dp" android:layout_marginStart="148dp" android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp" app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Colored" android:textSize="18sp" android:textColor="#000000"
            app:layout_constraintHorizontal_bias="0.498" android:background="@drawable/layout_background_1"/>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>